0.756 (10.25.2006) - John Siracusa <siracusa@mindspring.com>

    * Corrected some typos in the documentation.
    * Fixed a bug in the Manager that cause the with_objects parameter 
      to be ignored when the count_only parameter is set.  (Reported
      by Uwe Voelker)
    * The column_values_as_*() helper methods no longer require the 
      column_value_pairs() helper to also be imported.  (Reported
      by Jonathan Vanasco)
    * Fixed a bug caused by blank lines in JSON and YAML output. 
      (Patch by Jonathan Vanasco)
    * Setting a fixed-length character column to undef now works
      correctly.

0.755 (10.20.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that could cause ...-to-many accessors with
      custom sort orders to fail in some situations.
    * Removed some imported functions to correctly reflect the 
      documented list of reserved method names.  (Reported by
      Uwe Voelker)
    * Added the allow_empty_lists parameter to the Manager's 
      get_objects() method.  (Suggested by Ask Bjørn Hansen)
    * Fixed bugs in the query hints implementation.

0.754 (10.06.2006) - John Siracusa <siracusa@mindspring.com>

    * Added an optional db argument to the prime_all_caches() and
      prime_caches() metadata methods.  (Suggested by Jonathan Vanasco)
    * Improved and documented the way that unique keys are selected by
      the load() method.  (Patch by Graham Barr)
    * Fixed a bug that caused foreign key column lookups to fail in
      Postgres when using the unicode database encoding.
    * Invalid dates are now detected in the query portion of Manager calls.
    * The test suite now refuses to run SQLite tests if the buggy 
      DBD::SQLite version 1.13 is installed.
    * Fixed some typos in the documentation.

0.753 (09.17.2006) - John Siracusa <siracusa@mindspring.com>

    * Improved the convention manager's plural_to_singular() method.
    * Added "match", "imatch", and "similar" operators to QueryBuilder.