@@ -807,22 +807,12 @@ EOF
       my %key_columns;
       @key_columns{@local_cols} = @foreign_cols;
 
-
-      if(my $alt_key_name = $cm->auto_foreign_key_name($foreign_class, $key_name))
-      {
-        $key_name = $alt_key_name;
-      }
-      elsif($key_name !~ /^[a-zA-Z]\w*$/)
-      {
-        $key_name = undef;
-      }
-
       my $fk = 
         Rose::DB::Object::Metadata::ForeignKey->new(
           name        => $key_name,
           class       => $foreign_class,
           key_columns => \%key_columns);
-
+      
       push(@foreign_keys, $fk);
       $total_fks++;
     }
@@ -832,22 +822,29 @@ EOF
     # foreign keys to work in a predictible manner.  This exact sort order
     # (lowercase table name comparisons) is part of the API for foreign
     # key auto generation.
-    #
-    # XXX: This is somewhat superseded by the convention manager, but it
-    # XXX: doesn't hurt to leave it here.
     @foreign_keys = 
       sort { lc $a->class->meta->table cmp lc $b->class->meta->table } 
       @foreign_keys;
 
+    my %used_names;
+
     foreach my $fk (@foreign_keys)
     {
-      my $name = $self->foreign_key_name_generator->($self, $fk);
+      my $name =
+        $cm->auto_foreign_key_name($fk->class, $fk->name, scalar $fk->key_columns, \%used_names);
 
+      unless(defined $name)
+      {
+        $fk->name($name = $self->foreign_key_name_generator->($self, $fk));
+      }
+      
       unless(defined $name && $name =~ /^\w+$/)
       {
         die "Missing or invalid key name '$name' for foreign key ",
             "generated in $class for ", $fk->class;
       }
+
+      $used_names{$name}++;
 
       $fk->name($name);
     }
